Fixes what I can for select boxes.

--- a/index.html
+++ b/index.html
@@ -45,10 +45,11 @@
 		<br/>
 		<input type="text" id="text1" /><br/>
 		<label for="text1">Text label</label><br/>
-		<select>
+		<select id="select1">
 			<option value="3">3</option>
 			<option value="4">4</option>
 		</select>
+		<label for="select1">Select label</label><br/>
 		<br/>
 		<input type="time" id="time" /><br/>
 		<input type="date" id="date" /><br/>
